package org.example.hotel.types;

public enum Statut {
    CONFIRMEE,
    ANNULEE,
    EN_ATTENTE
}
